# CoreFall

./: CMakeLists.txt  README.md  todo.txt
include/glad/: glad.h
shaders/: FragmentShader.glsl  VertexShader.glsl
src/: Camera.cpp  Camera.h  LoadShader.cpp  LoadShader.h  Material.cpp  Material.h  Triangle.cpp  Triangle.h  glad.cpp  main.cpp
src/lights/: Light.cpp  Light.h
src/meshes/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Dodecahedron.cpp  Dodecahedron.h  Icosahedron.cpp  Icosahedron.h  Loaded.cpp  Loaded.h  Mesh.cpp  Mesh.h  Octahedron.cpp  Octahedron.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Tetrahedron.cpp  Tetrahedron.h  Torus.cpp  Torus.h  Trapezohedron.cpp  Trapezohedron.h  Triangle.cpp  Triangle.h
src/object/: Object.cpp  Object.h
textures/: default_texture.dds  default_texture2.dds  uv_texture.dds
